# DOCUSTITCH

./: .gitignore  README.md  README_FRONTEND(OPTIONAL).md  requirements.txt  setup.cfg
.github/workflows/: ci.yml
api/: api.py
artifacts/: lexicon.yaml
artifacts/_eval/: summary_eval_1200.csv  summary_eval_1200_report.csv  summary_eval_3000.csv  summary_eval_3000_report.md
artifacts/cfr_20_408/: backend_benchmark.csv  deliverable.json  edges_explicit.parquet  edges_implicit.parquet  edges_merged.parquet  explicit_refs_flat.csv  gists.jsonl  graph.parquet  graph_merged.parquet  graph_metrics.json  parity_report.csv  parity_summary.txt  pdf_refs.jsonl  ref_score.csv  sections.jsonl  sections_pdf.jsonl  stitched_list.json  summary_1200.txt  summary_1200_refined_qwen72b.txt  summary_2000_refined_qwen72b.txt  summary_3000.txt  summary_3000_refined.txt  summary_5000_refined_qwen72b.txt  summary_900_refined_hf.txt  summary_900_refined_none.txt  terms.parquet  (+2 more)
conf/: config.yaml  models.yaml
data/: legal_seeds.csv
docustitch/: __init__.py
docustitch.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
frontend/: index.html  package-lock.json  package.json
pipeline/: build_gists.py  build_graph.py  build_implicit.py  build_waypoints.py  compare_sections.py  edges_from_flat.py  edges_from_refs.py  eval_summaries.py  extract_refs.py  extract_terms.py  link_explicit.py  llm_refine.py  merge_graph.py  mine_lexicon.py  parse_pdf_align_select.py  parse_xml.py  render_summary.py  score_refs.py  stitch_list.py  summarize.py
tests/: test_explicit_refs.py
(+112 files in other folders)
