[metadata]
name = docustitch
version = 0.1.0
description = Local CFR stitching toolkit
license = MIT

[options]
packages = find:
install_requires =
    pandas
    pyarrow
    networkx
    numpy
    scikit-learn
    typer
    pydantic>=2
    mlflow
    fastapi
    uvicorn
    requests

[options.packages.find]
exclude =
    tests
    artifacts
    .github
